Make sure that 'Show more results' is visible

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -265,6 +265,10 @@ button#search
 	visibility: hidden;
 }
 
+#searchresults .scroller {
+	margin-bottom: 52px;
+}
+
 .badscroll #clearSearch {
 	position:fixed;
 }
